security: Remove hardcoded secrets and add environment configuration
- Add .env for sensitive configuration (InfluxDB token)
- Add .env.example as public template
- Update .gitignore to exclude secrets and sensitive files
- Refactor consumer_prices.py to use environment variables with validation
- Refactor agents/config.py to load .env with python-dotenv
- Add python-dotenv==1.0.1 to requirements.txt
- Add comprehensive README.md with quick start guide
- Add TROUBLESHOOTING.md for timestamp issue documentation

BREAKING CHANGE: InfluxDB token must now be set in .env file